<resources>
    <string name="app_name">MyLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dhana suresh</string>
    <string name="nav_header_subtitle">My life planning</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Meditation">Meditation</string>
    <string name="Gym">Exercise</string>
    <string name="Notification">Remind Me</string>
    <string name="Timer">Timer</string>
    <string name="skills">Skills</string>
    <string name="todo">ToDo</string>
    <string name="menu_home">MyLife</string>
    <string name="menu_gallery">Events</string>
    <string name="menu_slideshow">Options</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_meditation">Meditation</string>
</resources>